@@ -514,3 +514,41 @@ class Test(BaseTest):
                 max_timeout=10)
 
         filebeat.check_kill_and_wait()
+
+    def test_skip_symlinks(self):
+        """
+        Test that symlinks are skipped
+        """
+        self.render_config_template(
+            path=os.path.abspath(self.working_dir) + "/log/*",
+        )
+
+        os.mkdir(self.working_dir + "/log/")
+        testfile = self.working_dir + "/log/test-2016.log"
+        symlink_file = self.working_dir + "/log/test.log"
+
+        # write first line
+        with open(testfile, 'a') as file:
+            file.write("Hello world\n")
+
+        os.symlink(testfile, symlink_file)
+
+        filebeat = self.start_beat()
+
+        # wait for file to be skipped
+        self.wait_until(
+            lambda: self.log_contains("skipped as it is a symlink"),
+            max_timeout=10)
+
+        # wait for log to be read
+        self.wait_until(
+            lambda: self.output_has(lines=1),
+            max_timeout=15)
+
+        time.sleep(5)
+        filebeat.check_kill_and_wait()
+
+        data = self.read_output()
+
+        # Make sure there is only one entry, means it didn't follow the symlink
+        assert len(data) == 1
